<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity"
    android:background="@color/grey"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_tulo_da_tarefa"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@color/light_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/til_hour"
        app:layout_constraintTop_toBottomOf="@id/til_task"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_calendar"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_da_tarefa"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@color/light_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_task"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_time"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hora_da_tarefa"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@color/light_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_date"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_detail"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/descri_o_da_tarefa"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@color/light_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_criar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar_tarefa"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_detail"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <Button
        android:id="@+id/bt_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_tarefa"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_detail"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <Button
        android:id="@+id/bt_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_criar"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/light_grey"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>